--- a/Reddit.App/Views/TopPostPage.xaml
+++ b/Reddit.App/Views/TopPostPage.xaml
@@ -3,11 +3,15 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Reddit.App.Views"
-    xmlns:data="using:Reddit.Core.Models"
+    xmlns:data="using:Reddit.App.Models"
+    xmlns:converter="using:Microsoft.Toolkit.Uwp.UI.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Background="Black"
     mc:Ignorable="d">
+    <Page.Resources>
+        <converter:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" FalseValue="Visible"></converter:BoolToVisibilityConverter>
+    </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="0.03*" />
@@ -15,20 +19,22 @@
             <RowDefinition Height="0.03*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="250"/>
+            <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <TextBlock Text="Reddit Posts" Foreground="White" />
         <ListView
+            x:Name="PostList"
             Grid.Row="1"
             IsItemClickEnabled="True"
             ItemClick="ListView_ItemClick"
             ItemsSource="{x:Bind ViewModel.Posts}">
             <ListView.ItemTemplate>
-                <DataTemplate x:DataType="data:Post">
+                <DataTemplate x:DataType="data:RedditListItem">
                     <StackPanel Height="125" BorderBrush="Gray" BorderThickness="0,1,0,0">
                         <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="{x:Bind author}"
+                            <Ellipse Fill="SteelBlue" Height="20" Width="20" Visibility="{x:Bind Viewed, Converter={StaticResource BoolToVisibilityConverter }}" />
+                            <TextBlock Text="{x:Bind Value.author}"
                                        Foreground="White"
                                        VerticalAlignment="Center"
                                         Margin="10,0,0,0" />
@@ -36,37 +42,38 @@
                                        Foreground="White"
                                        VerticalAlignment="Center"
                                        Margin="10,0,0,0" />
+                            <TextBlock Text="{x:Bind Viewed}"
+                                       Foreground="White"
+                                       VerticalAlignment="Center"
+                                       Margin="10,0,0,0" />
                         </StackPanel>
                         <StackPanel Orientation="Horizontal">
-                            <Image Source="{x:Bind thumbnail}" Width="50" Height="60" Margin="5"/>
-                            <TextBlock Text="{x:Bind title}" TextWrapping="Wrap" Width="150" MaxLines="4" Foreground="White"/>
-                            <TextBlock Text=">" VerticalAlignment="Center"  Foreground="White"/>
+                            <Image Source="{x:Bind Value.thumbnail}" Width="50" Height="60" Margin="5" />
+                            <TextBlock Text="{x:Bind Value.title}" TextWrapping="Wrap" Width="150" MaxLines="4" Foreground="White" />
+                            <TextBlock Text=">" VerticalAlignment="Center"  Foreground="White" />
                         </StackPanel>
                         <StackPanel Orientation="Horizontal">
-                            <Button Foreground="Brown">Dismiss</Button>
+                            <Button Foreground="Brown" Command="{Binding DismissCommand}"  CommandParameter="{x:Bind Value}">Dismiss</Button>
                         </StackPanel>
-                        <Border BorderThickness="1" BorderBrush="Gray" VerticalAlignment="Bottom"/>
+                        <Border BorderThickness="1" BorderBrush="Gray" VerticalAlignment="Bottom" />
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Button HorizontalAlignment="Center" Grid.Row="2" Foreground="Brown">Dismiss All</Button>
+        <Button HorizontalAlignment="Center" Grid.Row="2" Foreground="Brown" Command="{x:Bind ViewModel.DismissAllCommand}" >Dismiss All</Button>
         <Grid Name="DetailGrid" Grid.Column="1" Grid.Row="0" Grid.RowSpan="3" Margin="10,0,10,0" Background="White">
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
+                <RowDefinition Height="0.1*" />
+                <RowDefinition Height="0.2*" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-
-            <TextBlock Text="{x:Bind ViewModel.Selected.author}"/>
-            <Image Source="{x:Bind ViewModel.Selected.thumbnail}" Margin="5"/>
-            <TextBlock Text="{x:Bind ViewModel.Selected.title}" TextWrapping="Wrap" MaxLines="4"/>
-
-
+            <TextBlock Text="{x:Bind ViewModel.Selected.author, Mode=OneWay}" />
+            <Image Source="{x:Bind ViewModel.Selected.url, Mode=OneWay}" Margin="5" />
+            <TextBlock Grid.Row="2" Text="{x:Bind ViewModel.Selected.title, Mode=OneWay}" TextWrapping="Wrap" MaxLines="4" />
         </Grid>
         <ProgressRing Name="ProgressRing"
                       Width="100"
